# ai-review-attacks

./: .env.example  .gitignore  DEMO_GUIDE.md  README.md  conftest.py  pyproject.toml
attacks/01-context-files/: README.md  run.py
attacks/01-context-files/01a-selective-blindness/: AGENTS_clean.md  AGENTS_poisoned.md  README.md  vulnerable_code.py
attacks/01-context-files/01b-hidden-instructions/: AGENTS_clean.md  AGENTS_poisoned.md  README.md  vulnerable_code.py
attacks/02-review-manipulation/: README.md  run.py
attacks/02-review-manipulation/02a-comment-injection/: README.md  fetch_clean.py  fetch_poisoned.py
attacks/02-review-manipulation/02b-string-literal-injection/: README.md  settings_clean.py  settings_poisoned.py
attacks/02-review-manipulation/02c-context-overflow/: README.md  auth_bypass.py  generate_noise.py
attacks/03-trust-boundary/: README.md  dns_rebind_demo.py  proxy.py  run.py
attacks/03-trust-boundary/tests/: test_proxy.py
attacks/04-runtime-compromise/: README.md  run.py
attacks/04-runtime-compromise/04a-mcp-description-injection/: README.md  caller_under_review.py  (+2 more)
defenses/: README.md
defenses/01-codeowners/: CODEOWNERS  README.md
defenses/02-invariant-tests/: README.md
defenses/03-separated-rules/: README.md
defenses/04-architectural/: README.md
defenses/05-human-review/: README.md  high-risk-paths.codeowners  pr-checklist.md
defenses/06-runtime-hardening/: README.md  allowlist-mcp.json  test_sanitizer.py  tool_output_sanitizer.py
harness/: README.md  __init__.py  reviewer.py  runner.py
scripts/: run-all-demos.sh
(+13 files in other folders)
